XWIKI-20845: XARExportIT.scenarioExportXAR is flickering
  * Move XARExportIT to a docker test
  * Change TreeNodeElement#waitForIt to actually check the aria-busy
    attribute of the anchor element, and not of the li element as in the
dom it appears that the li element doesn't have an aria-busy attribute

(cherry picked from commit 4f5e26019a2df44642f1869a2737f4edfe55d902)